front: refactored field, task creation, fields map and tasks pages with better UI/UX

--- a/new-frontend/translations/en.json
+++ b/new-frontend/translations/en.json
@@ -251,9 +251,18 @@
         "drainage": "Drainage",
         "lastTested": "Last Tested",
         "openInGoogleMaps": "Open in Google Maps",
-        "backToFields": "Back to Fields",
         "lastUpdated": "Last Updated",
-        "deleteFieldWarning": "This action cannot be undone. All tasks associated with this field will remain in the system but will no longer be linked to a field."
+        "deleteFieldWarning": "This action cannot be undone. All tasks associated with this field will remain in the system but will no longer be linked to a field.",
+        "createTitle": "Create New Field",
+        "drawInstructions": "Click on the map to draw your field boundary. Click at least 3 points to create a polygon, then click the finish button.",
+        "noPermissionCreate": "You do not have permission to create fields",
+        "contactAdminForAccess": "Please contact your administrator for access",
+        "fillAllRequiredFields": "Please fill in all required fields",
+        "fieldCreatedSuccess": "Field created successfully",
+        "fieldCreatedError": "Failed to create field",
+        "failedToLoadCropOptions": "Failed to load crop options",
+        "failedToLoadExistingFields": "Failed to load existing fields",
+        "backToFields": "Back to Fields"
     },
     "fieldsMap": {
         "title": "Farm Fields Map View",
@@ -319,6 +328,10 @@
         "processingVoice": "Processing voice input...",
         "noTasksAvailable": "No tasks available.",
         "fetchTasksError": "Failed to fetch tasks.",
+        "fetchCommentsError": "Failed to fetch comments.",
+        "fetchEquipmentError": "Failed to fetch equipment.",
+        "fetchMembersError": "Failed to load farm members.",
+        "loadEquipmentError": "Failed to load available equipment.",
         "fetchSeasonsError": "Failed to load seasons.",
         "viewTask": "View Task",
         "taskStatusPending": "Pending",
@@ -336,7 +349,98 @@
         "completed": "Completed", 
         "pending": "Pending",
         "canceled": "Canceled",
-        "noDescription": "No description provided"
+        "noDescription": "No description provided",
+        "loadingTask": "Loading task details...",
+        "taskNotFound": "Task not found",
+        "backToTasks": "Back to Tasks",
+        "backToDashboard": "Back to Dashboard",
+        "contactAdmin": "Please contact your administrator for access.",
+        "equipment": "Equipment",
+        "participants": "Participants",
+        "comments": "Comments",
+        "noEquipmentAssigned": "No equipment assigned to this task",
+        "noParticipants": "No participants assigned to this task",
+        "noComments": "No comments yet",
+        "writeComment": "Write a comment...",
+        "postComment": "Post Comment",
+        "deleteComment": "Delete Comment",
+        "confirmDeletion": "Confirm Deletion",
+        "delete": "Delete",
+        "confirmDeleteCommentPrompt": "Are you sure you want to delete this comment?",
+        "cancelParticipation": "Cancel Participation",
+        "participate": "Participate",
+        "cancelTask": "Cancel Task",
+        "uncancelTask": "Restore Task",
+        "markCompleted": "Mark as Completed",
+        "unknownUser": "Unknown User",
+        "minutesWorkedAllParticipants": "Total minutes worked (all participants)",
+        "fuelUsedFor": "Fuel used for",
+        "liters": "liters",
+        "minutesPlaceholder": "e.g., 90",
+        "fuelPlaceholder": "e.g., 12.5",
+        "markTaskAsCompleted": "Mark Task as Completed",
+        "submit": "Submit",
+        "editEquipment": "Edit Equipment",
+        "doneEditing": "Done Editing",
+        "editParticipants": "Edit Participants",
+        "selectUsersToAssign": "Select users to assign",
+        "noMembersAvailable": "No members available",
+        "assign": "Assign",
+        "removeEquipment": "Remove Equipment",
+        "removeParticipant": "Remove Participant",
+        "selectEquipmentWarning": "Please select equipment to assign",
+        "equipmentAlreadyAssigned": "This equipment is already assigned",
+        "equipmentAssignSuccess": "Equipment assigned successfully",
+        "equipmentAssignError": "Failed to assign equipment",
+        "participantsAddedSuccess": "Participants added successfully",
+        "participantsAddedError": "Failed to add participants",
+        "participantRemovedSuccess": "Participant removed successfully",
+        "participantRemovedError": "Failed to remove participant",
+        "equipmentRemovedSuccess": "Equipment removed successfully",
+        "equipmentRemovedError": "Failed to remove equipment",
+        "emptyCommentWarning": "Comment cannot be empty",
+        "commentPostedSuccess": "Comment posted successfully",
+        "commentPostedError": "Failed to post comment",
+        "commentDeletedSuccess": "Comment deleted successfully",
+        "commentDeletedError": "Failed to delete comment",
+        "invalidAction": "Invalid action",
+        "participateSuccess": "You are now participating in this task",
+        "cancelParticipationSuccess": "You are no longer participating in this task",
+        "cancelTaskSuccess": "Task has been canceled",
+        "uncancelTaskSuccess": "Task has been restored",
+        "actionSuccess": "Action completed successfully",
+        "actionError": "Failed to perform {action}",
+        "enterMinutesWarning": "Please enter minutes worked",
+        "taskCompletedSuccess": "Task marked as completed successfully",
+        "taskCompletedError": "Failed to mark task as completed",
+        "noEquipmentAvailable": "No equipment available",
+        "createSuccess": "Task created successfully.",
+        "createError": "Failed to create task.",
+        "fetchOptionsError": "Failed to load options.",
+        "fetchWeatherError": "Failed to get weather insights.",
+        "requiredFieldsWarning": "Please fill in all required fields.",
+        "dueDateRequired": "Due Date is required.",
+        "dueDatePastError": "Due Date cannot be in the past.",
+        "completionDateRequired": "Completion Date is required.",
+        "completionDateFutureError": "Completion Date cannot be in the future.",
+        "dueDateOutsideSeasonError": "Due date must be within the selected season's timeframe.",
+        "completionDateOutsideSeasonError": "Completion date must be within the selected season's timeframe.",
+        "browserSupportError": "Speech recognition not supported in this browser.",
+        "voiceInputReceived": "Voice input received. Processing...",
+        "speechRecognitionError": "Speech recognition error. Try again.",
+        "recordingStopped": "Voice recording stopped.",
+        "aiOptimizedDescription": "AI optimized the description.",
+        "aiOptimizationError": "Failed to refine description.",
+        "calculatingOptimalDate": "Calculating optimal date...",
+        "fieldSelectedFromUrl": "Field selected from page",
+        "descriptionPlaceholder": "Enter task description",
+        "selectDueDate": "Select due date",
+        "selectCompletionDate": "Select completion date",
+        "selectEquipmentPlaceholder": "Select required equipment",
+        "noMatchingEquipment": "No matching equipment found",
+        "noFieldsAvailable": "No fields available",
+        "noSeasonsAvailable": "No seasons available",
+        "loading": "Loading..."
     },
     "cropHealth": {
         "title": "Crop Health Diagnosis (AI)",
