--- a/new-frontend/translations/lt.json
+++ b/new-frontend/translations/lt.json
@@ -243,9 +243,18 @@
         "drainage": "Drenažas",
         "lastTested": "Paskutinis tyrimas",
         "openInGoogleMaps": "Atidaryti Google Maps",
-        "backToFields": "Grįžti į laukus",
         "lastUpdated": "Paskutinis atnaujinimas",
-        "deleteFieldWarning": "Šio veiksmo nebus galima atšaukti. Visos su šiuo lauku susijusios užduotys liks sistemoje, bet nebebus susietos su lauku."
+        "deleteFieldWarning": "Šio veiksmo nebus galima atšaukti. Visos su šiuo lauku susijusios užduotys liks sistemoje, bet nebebus susietos su lauku.",
+        "createTitle": "Sukurti Naują Lauką",
+        "drawInstructions": "Spustelėkite ant žemėlapio, kad nubrėžtumėte lauko ribas. Pažymėkite bent 3 taškus daugiakampiui sukurti, tada spustelėkite užbaigimo mygtuką.",
+        "noPermissionCreate": "Jūs neturite teisės kurti laukus",
+        "contactAdminForAccess": "Susisiekite su administratoriumi dėl prieigos",
+        "fillAllRequiredFields": "Prašome užpildyti visus privalomus laukus",
+        "fieldCreatedSuccess": "Laukas sėkmingai sukurtas",
+        "fieldCreatedError": "Nepavyko sukurti lauko",
+        "failedToLoadCropOptions": "Nepavyko įkelti pasėlių pasirinkimų",
+        "failedToLoadExistingFields": "Nepavyko įkelti esamų laukų",
+        "backToFields": "Grįžti į Laukus"
     },
     "fieldsMap": {
         "title": "Laukų žemėlapis",
@@ -311,6 +320,10 @@
         "processingVoice": "Apdorojamas balso įrašas...",
         "noTasksAvailable": "Užduočių nėra.",
         "fetchTasksError": "Nepavyko gauti užduočių.",
+        "fetchCommentsError": "Nepavyko gauti komentarų.",
+        "fetchEquipmentError": "Nepavyko gauti įrangos.",
+        "fetchMembersError": "Nepavyko įkelti ūkio narių.",
+        "loadEquipmentError": "Nepavyko įkelti prieinamos įrangos.",
         "fetchSeasonsError": "Nepavyko įkelti sezonų.",
         "viewTask": "Peržiūrėti užduotį",
         "taskStatusPending": "Suplanuotos",
@@ -328,7 +341,98 @@
         "completed": "Atlikta", 
         "pending": "Laukiančios",
         "canceled": "Atšauktos",
-        "noDescription": "Aprašymas nepateiktas"
+        "noDescription": "Aprašymas nepateiktas",
+        "loadingTask": "Įkeliama užduoties informacija...",
+        "taskNotFound": "Užduotis nerasta",
+        "backToTasks": "Grįžti į užduotis",
+        "backToDashboard": "Grįžti į valdymo skydelį",
+        "contactAdmin": "Prašome susisiekti su administratoriumi dėl prieigos.",
+        "equipment": "Įranga",
+        "participants": "Dalyviai",
+        "comments": "Komentarai",
+        "noEquipmentAssigned": "Šiai užduočiai nepriskirta jokia įranga",
+        "noParticipants": "Šiai užduočiai nepriskirta jokių dalyvių",
+        "noComments": "Komentarų dar nėra",
+        "writeComment": "Rašyti komentarą...",
+        "postComment": "Skelbti komentarą",
+        "deleteComment": "Ištrinti komentarą",
+        "confirmDeletion": "Patvirtinti ištrynimą",
+        "delete": "Ištrinti",
+        "confirmDeleteCommentPrompt": "Ar tikrai norite ištrinti šį komentarą?",
+        "cancelParticipation": "Atšaukti dalyvavimą",
+        "participate": "Dalyvauti",
+        "cancelTask": "Atšaukti užduotį",
+        "uncancelTask": "Atkurti užduotį",
+        "markCompleted": "Žymėti kaip užbaigtą",
+        "unknownUser": "Nežinomas vartotojas",
+        "minutesWorkedAllParticipants": "Bendras dirbtas laikas (minutėmis)",
+        "fuelUsedFor": "Degalų sunaudota",
+        "liters": "litrai",
+        "minutesPlaceholder": "pvz., 90",
+        "fuelPlaceholder": "pvz., 12.5",
+        "markTaskAsCompleted": "Pažymėti užduotį kaip užbaigtą",
+        "submit": "Pateikti",
+        "editEquipment": "Redaguoti įrangą",
+        "doneEditing": "Baigti redagavimą",
+        "editParticipants": "Redaguoti dalyvius",
+        "selectUsersToAssign": "Pasirinkite vartotojus priskyrimui",
+        "noMembersAvailable": "Nėra galimų narių",
+        "assign": "Priskirti",
+        "removeEquipment": "Pašalinti įrangą",
+        "removeParticipant": "Pašalinti dalyvį",
+        "selectEquipmentWarning": "Pasirinkite įrangą, kurią norite priskirti",
+        "equipmentAlreadyAssigned": "Ši įranga jau yra priskirta",
+        "equipmentAssignSuccess": "Įranga sėkmingai priskirta",
+        "equipmentAssignError": "Nepavyko priskirti įrangos",
+        "participantsAddedSuccess": "Dalyviai sėkmingai pridėti",
+        "participantsAddedError": "Nepavyko pridėti dalyvių",
+        "participantRemovedSuccess": "Dalyvis sėkmingai pašalintas",
+        "participantRemovedError": "Nepavyko pašalinti dalyvio",
+        "equipmentRemovedSuccess": "Įranga sėkmingai pašalinta",
+        "equipmentRemovedError": "Nepavyko pašalinti įrangos",
+        "emptyCommentWarning": "Komentaras negali būti tuščias",
+        "commentPostedSuccess": "Komentaras sėkmingai paskelbtas",
+        "commentPostedError": "Nepavyko paskelbti komentaro",
+        "commentDeletedSuccess": "Komentaras sėkmingai ištrintas",
+        "commentDeletedError": "Nepavyko ištrinti komentaro",
+        "invalidAction": "Neteisingas veiksmas",
+        "participateSuccess": "Dabar dalyvaujate šioje užduotyje",
+        "cancelParticipationSuccess": "Jūs nebedalyvaujate šioje užduotyje",
+        "cancelTaskSuccess": "Užduotis atšaukta",
+        "uncancelTaskSuccess": "Užduotis atkurta",
+        "actionSuccess": "Veiksmas sėkmingai atliktas",
+        "actionError": "Nepavyko atlikti veiksmo: {action}",
+        "enterMinutesWarning": "Įveskite dirbtą laiką minutėmis",
+        "taskCompletedSuccess": "Užduotis sėkmingai pažymėta kaip užbaigta",
+        "taskCompletedError": "Nepavyko pažymėti užduoties kaip užbaigtos",
+        "noEquipmentAvailable": "Nėra galimos įrangos",
+        "createSuccess": "Užduotis sėkmingai sukurta.",
+        "createError": "Nepavyko sukurti užduoties.",
+        "fetchOptionsError": "Nepavyko įkelti parinkčių.",
+        "fetchWeatherError": "Nepavyko gauti orų įžvalgų.",
+        "requiredFieldsWarning": "Prašome užpildyti visus privalomus laukus.",
+        "dueDateRequired": "Termino data yra privaloma.",
+        "dueDatePastError": "Termino data negali būti praeityje.",
+        "completionDateRequired": "Užbaigimo data yra privaloma.",
+        "completionDateFutureError": "Užbaigimo data negali būti ateityje.",
+        "dueDateOutsideSeasonError": "Termino data turi būti pasirinkto sezono laikotarpyje.",
+        "completionDateOutsideSeasonError": "Užbaigimo data turi būti pasirinkto sezono laikotarpyje.",
+        "browserSupportError": "Balso atpažinimas nepalaikomas šioje naršyklėje.",
+        "voiceInputReceived": "Balso įvestis gauta. Apdorojama...",
+        "speechRecognitionError": "Balso atpažinimo klaida. Bandykite dar kartą.",
+        "recordingStopped": "Balso įrašymas sustabdytas.",
+        "aiOptimizedDescription": "AI optimizavo aprašymą.",
+        "aiOptimizationError": "Nepavyko optimizuoti aprašymo.",
+        "calculatingOptimalDate": "Skaičiuojama optimali data...",
+        "fieldSelectedFromUrl": "Laukas pasirinktas iš puslapio",
+        "descriptionPlaceholder": "Įveskite užduoties aprašymą",
+        "selectDueDate": "Pasirinkite termino datą",
+        "selectCompletionDate": "Pasirinkite užbaigimo datą",
+        "selectEquipmentPlaceholder": "Pasirinkite reikalingą įrangą",
+        "noMatchingEquipment": "Nerasta atitinkančios įrangos",
+        "noFieldsAvailable": "Nėra prieinamų laukų",
+        "noSeasonsAvailable": "Nėra prieinamų sezonų",
+        "loading": "Kraunama..."
     },
     "cropHealth": {
         "title": "Pasėlių Sveikatos Diagnozė (AI)",
