feat: made restore password functionable, created page for it, other changes

--- a/new-frontend/translations/en.json
+++ b/new-frontend/translations/en.json
@@ -675,32 +675,59 @@
         "permissionsSubtitle": "Accumsan in nisl nisi scelerisque"
     },
     "login": {
-        "welcomeBack": "Welcome Back",
+        "welcomeBack": "Welcome Back!",
         "signInToContinue": "Sign in to continue",
         "username": "Username",
+        "enterUsername": "Enter username",
         "password": "Password",
-        "enterUsername": "Enter your username",
-        "enterPassword": "Enter your password",
+        "enterPassword": "Enter password",
         "rememberMe": "Remember me",
-        "forgotPassword": "Forgot password?",
+        "forgotPassword": "Forgot Password?",
         "signIn": "Sign In",
-        "signingIn": "Signing In...",
-        "emptyFields": "There are empty fields",
-        "incorrectCredentials": "Incorrect credentials",
-        "errorOccurred": "An error has occurred: {message}",
-        "processingInvitation": "Processing your invitation...",
-        "pendingInvitation": "You have a pending invitation to join {farmName}",
-        "noFarm": "You have no farm yet, please create one",
-        "welcomeFarm": "Welcome to {farmName}",
-        "loginFailed": "Failed to log in.",
-        "selectFarm": "Select a Farm",
-        "multipleFarms": "You have access to multiple farms",
+        "signingIn": "Signing in...",
+        "goToSignUp": "Don't have an account? Sign up",
+        "selectFarm": "Select Farm",
+        "multipleFarms": "You have access to multiple farms. Please select one to continue.",
         "chooseFarm": "Choose Farm",
-        "selectFarmPlaceholder": "-- Select Farm --",
-        "confirmFarm": "Confirm Farm",
-        "selectFarmError": "Please select a farm.",
+        "selectFarmPlaceholder": "Select a farm...",
+        "confirmFarm": "Continue",
+        "emptyFields": "Please fill in all fields",
+        "processingInvitation": "Processing your invitation...",
+        "pendingInvitation": "You have a pending invitation to {{farmName}}",
+        "noFarm": "You don't have access to any farms. Please create one to continue.",
+        "welcomeFarm": "Welcome to {{farmName}}!",
         "farmSelected": "Farm selected successfully!",
-        "goToSignUp": "Don't have an account? Sign Up"
+        "selectFarmError": "Please select a farm",
+        "incorrectCredentials": "Incorrect username or password",
+        "errorOccurred": "An error occurred: {{message}}",
+        "loginFailed": "Login failed",
+        "enterValidEmail": "Please enter a valid email address",
+        "resetEmailSent": "Password reset instructions have been sent to your email",
+        "sending": "Sending...",
+        "sendResetEmail": "Send Reset Email",
+        "enterEmailForReset": "Enter your email address and we'll send you instructions to reset your password",
+        "emailNotFound": "No account found with this email address",
+        "forgotPasswordError": "Failed to send reset email. Please try again.",
+        "cancel": "Cancel",
+        "email": "Email"
+    },
+    "resetPassword": {
+        "resetPassword": "Reset Password",
+        "enterNewPassword": "Enter your new password",
+        "newPassword": "New Password",
+        "confirmNewPassword": "Confirm New Password",
+        "confirmPasswordPlaceholder": "Confirm your new password",
+        "resetPasswordButton": "Reset Password",
+        "resetting": "Resetting...",
+        "fillAllFields": "Please fill in all fields",
+        "passwordTooShort": "Password must be at least 5 characters long",
+        "passwordsDoNotMatch": "Passwords do not match",
+        "passwordResetSuccess": "Password reset successfully! Redirecting to login...",
+        "invalidOrExpiredToken": "Invalid or expired reset token",
+        "resetError": "Failed to reset password. Please try again.",
+        "invalidToken": "Invalid Token",
+        "tokenExpiredMessage": "This password reset link is invalid or has expired.",
+        "backToLogin": "Back to Login"
     },
     "auth": {
         "createAccount": "Create an Account",
