--- a/new-frontend/translations/lt.json
+++ b/new-frontend/translations/lt.json
@@ -675,32 +675,59 @@
         "permissionsSubtitle": "Accumsan in nisl nisi scelerisque"
     },
     "login": {
-        "welcomeBack": "Sveiki sugrįžę",
+        "welcomeBack": "Sveiki sugrįžę!",
         "signInToContinue": "Prisijunkite, kad tęstumėte",
         "username": "Vartotojo vardas",
-        "password": "Slaptažodis",
         "enterUsername": "Įveskite vartotojo vardą",
+        "password": "Slaptažodis",
         "enterPassword": "Įveskite slaptažodį",
         "rememberMe": "Prisiminti mane",
         "forgotPassword": "Pamiršote slaptažodį?",
         "signIn": "Prisijungti",
         "signingIn": "Jungiamasi...",
-        "emptyFields": "Yra tuščių laukų",
-        "incorrectCredentials": "Neteisingi prisijungimo duomenys",
-        "errorOccurred": "Įvyko klaida: {message}",
-        "processingInvitation": "Apdorojama jūsų kvietimas...",
-        "pendingInvitation": "Turite kvietimą prisijungti prie {farmName}",
-        "noFarm": "Neturite nė vieno ūkio. Sukurkite naują.",
-        "welcomeFarm": "Sveiki atvykę į {farmName}",
-        "loginFailed": "Nepavyko prisijungti.",
+        "goToSignUp": "Neturite paskyros? Registruokitės",
         "selectFarm": "Pasirinkite ūkį",
-        "multipleFarms": "Turite prieigą prie kelių ūkių",
+        "multipleFarms": "Turite prieigą prie kelių ūkių. Pasirinkite vieną, kad tęstumėte.",
         "chooseFarm": "Pasirinkite ūkį",
-        "selectFarmPlaceholder": "-- Pasirinkite ūkį --",
-        "confirmFarm": "Patvirtinti ūkį",
-        "selectFarmError": "Pasirinkite ūkį.",
+        "selectFarmPlaceholder": "Pasirinkite ūkį...",
+        "confirmFarm": "Tęsti",
+        "emptyFields": "Prašome užpildyti visus laukus",
+        "processingInvitation": "Apdorojamas jūsų kvietimas...",
+        "pendingInvitation": "Turite laukiantį kvietimą į {{farmName}}",
+        "noFarm": "Neturite prieigos prie jokių ūkių. Sukurkite vieną, kad tęstumėte.",
+        "welcomeFarm": "Sveiki atvykę į {{farmName}}!",
         "farmSelected": "Ūkis sėkmingai pasirinktas!",
-        "goToSignUp": "Neturite paskyros? Registruotis"
+        "selectFarmError": "Prašome pasirinkti ūkį",
+        "incorrectCredentials": "Neteisingas vartotojo vardas arba slaptažodis",
+        "errorOccurred": "Įvyko klaida: {{message}}",
+        "loginFailed": "Prisijungimas nepavyko",
+        "enterValidEmail": "Prašome įvesti galiojantį el. pašto adresą",
+        "resetEmailSent": "Slaptažodžio atkūrimo instrukcijos išsiųstos į jūsų el. paštą",
+        "sending": "Siunčiama...",
+        "sendResetEmail": "Siųsti atkūrimo laišką",
+        "enterEmailForReset": "Įveskite savo el. pašto adresą ir mes atsiųsime jums slaptažodžio atkūrimo instrukcijas",
+        "emailNotFound": "Paskyra su šiuo el. pašto adresu nerasta",
+        "forgotPasswordError": "Nepavyko išsiųsti atkūrimo laiško. Bandykite dar kartą.",
+        "cancel": "Atšaukti",
+        "email": "El. paštas"
+    },
+    "resetPassword": {
+        "resetPassword": "Atkurti slaptažodį",
+        "enterNewPassword": "Įveskite naują slaptažodį",
+        "newPassword": "Naujas slaptažodis",
+        "confirmNewPassword": "Patvirtinkite naują slaptažodį",
+        "confirmPasswordPlaceholder": "Patvirtinkite savo naują slaptažodį",
+        "resetPasswordButton": "Atkurti slaptažodį",
+        "resetting": "Atkuriama...",
+        "fillAllFields": "Prašome užpildyti visus laukus",
+        "passwordTooShort": "Slaptažodis turi būti bent 5 simbolių ilgio",
+        "passwordsDoNotMatch": "Slaptažodžiai nesutampa",
+        "passwordResetSuccess": "Slaptažodis sėkmingai atkurtas! Nukreipiama į prisijungimą...",
+        "invalidOrExpiredToken": "Neteisingas arba pasibaigęs atkūrimo raktas",
+        "resetError": "Nepavyko atkurti slaptažodžio. Bandykite dar kartą.",
+        "invalidToken": "Neteisingas raktas",
+        "tokenExpiredMessage": "Ši slaptažodžio atkūrimo nuoroda yra neteisinga arba pasibaigusi.",
+        "backToLogin": "Grįžti į prisijungimą"
     },
     "auth": {
         "createAccount": "Sukurti paskyrą",
